sector added but sometimes missing

--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
@@ -721,12 +721,241 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Some Basic Stats"
+    "### Sector and Other Textual Company Information\n",
+    "\n",
+    "From Kaggle: https://www.kaggle.com/datasets/aramacus/usa-public-companies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Ticker                                        Description  \\\n",
+      "0      CTVA  Corteva, Inc. is a global provider of seed and...   \n",
+      "1      ALCO  Alico, Inc. is an agribusiness and land manage...   \n",
+      "2      LMNR  Limoneira Company is primarily an agribusiness...   \n",
+      "3      SANW  S&W Seed Company (S&W) is a multi-crop and mid...   \n",
+      "4       TRC  Tejon Ranch Co. is a diversified real estate d...   \n",
+      "...     ...                                                ...   \n",
+      "3139    HON  Honeywell International Inc. is a software-ind...   \n",
+      "3140    IEP  Icahn Enterprises L.P. is a diversified holdin...   \n",
+      "3141   SPLP  Steel Partners Holdings L.P. is a diversified ...   \n",
+      "3142    SEB  Seaboard Corporation is primarily engaged in h...   \n",
+      "3143  BRK.B  Berkshire Hathaway Inc. is a holding company o...   \n",
+      "\n",
+      "                     Company Name            Sector            Industry Group  \\\n",
+      "0                     CORTEVA INC         Materials                 Materials   \n",
+      "1                       ALICO INC  Consumer Staples  Food, Beverage & Tobacco   \n",
+      "2                    LIMONEIRA CO  Consumer Staples  Food, Beverage & Tobacco   \n",
+      "3                     S&W SEED CO  Consumer Staples  Food, Beverage & Tobacco   \n",
+      "4                  TEJON RANCH CO       Real Estate               Real Estate   \n",
+      "...                           ...               ...                       ...   \n",
+      "3139  HONEYWELL INTERNATIONAL INC       Industrials             Capital Goods   \n",
+      "3140         ICAHN ENTERPRISES LP       Industrials             Capital Goods   \n",
+      "3141   STEEL PARTNERS HOLDINGS LP       Industrials             Capital Goods   \n",
+      "3142                SEABOARD CORP  Consumer Staples  Food, Beverage & Tobacco   \n",
+      "3143           BERKSHIRE HATHAWAY        Financials    Diversified Financials   \n",
+      "\n",
+      "                                  Industry  \\\n",
+      "0                                Chemicals   \n",
+      "1                            Food Products   \n",
+      "2                            Food Products   \n",
+      "3                            Food Products   \n",
+      "4     Real Estate Management & Development   \n",
+      "...                                    ...   \n",
+      "3139              Industrial Conglomerates   \n",
+      "3140              Industrial Conglomerates   \n",
+      "3141              Industrial Conglomerates   \n",
+      "3142                         Food Products   \n",
+      "3143        Diversified Financial Services   \n",
+      "\n",
+      "                              Sub-Industry  \\\n",
+      "0     Fertilizers & Agricultural Chemicals   \n",
+      "1                    Agricultural Products   \n",
+      "2                    Agricultural Products   \n",
+      "3                    Agricultural Products   \n",
+      "4      Diversified Real Estate Activities    \n",
+      "...                                    ...   \n",
+      "3139              Industrial Conglomerates   \n",
+      "3140              Industrial Conglomerates   \n",
+      "3141              Industrial Conglomerates   \n",
+      "3142                Packaged Foods & Meats   \n",
+      "3143                 Multi-Sector Holdings   \n",
+      "\n",
+      "                                                Comment  \n",
+      "0     Producers of fertilizers, pesticides, potash o...  \n",
+      "1     Producers of agricultural products. Includes c...  \n",
+      "2     Producers of agricultural products. Includes c...  \n",
+      "3     Producers of agricultural products. Includes c...  \n",
+      "4     Companies engaged in a diverse spectrum of rea...  \n",
+      "...                                                 ...  \n",
+      "3139  Diversified industrial companies with business...  \n",
+      "3140  Diversified industrial companies with business...  \n",
+      "3141  Diversified industrial companies with business...  \n",
+      "3142  Producers of packaged foods including dairy pr...  \n",
+      "3143  A company with significantly diversified holdi...  \n",
+      "\n",
+      "[3144 rows x 8 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load CSV 'C:\\Users\\ijyli\\Box\\STAT 222 Capstone\\Raw Data\\US Public Companies Classification\\US_stocks.csv'\n",
+    "us_stocks = pd.read_csv(r'~\\Box\\STAT 222 Capstone\\Raw Data\\US Public Companies Classification\\US_stocks.csv')\n",
+    "print(us_stocks)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ticker          fixed_quarter_date earnings_call_date Rating  \\\n",
+      "0      ABBV  2014-10-01 00:00:00.000000         2014-07-25      A   \n",
+      "1      ABBV  2015-01-01 00:00:00.000000         2014-10-31      A   \n",
+      "2      ABBV  2015-04-01 00:00:00.000000         2015-01-30      A   \n",
+      "3      ABBV  2015-07-01 00:00:00.000000         2015-04-23      A   \n",
+      "4      ABBV  2015-10-01 00:00:00.000000         2015-07-24      A   \n",
+      "...     ...                         ...                ...    ...   \n",
+      "4367    ZTS  2015-10-01 00:00:00.000000         2015-08-04    BBB   \n",
+      "4368    ZTS  2016-01-01 00:00:00.000000         2015-11-03    BBB   \n",
+      "4369    ZTS  2016-04-01 00:00:00.000000         2016-02-16    BBB   \n",
+      "4370    ZTS  2016-07-01 00:00:00.000000         2016-05-04    BBB   \n",
+      "4371    ZTS  2016-10-01 00:00:00.000000         2016-08-03    BBB   \n",
+      "\n",
+      "                      Rating Agency Name rating_date         Source  \\\n",
+      "0     Standard & Poor's Ratings Services  2014-07-18       Original   \n",
+      "1     Standard & Poor's Ratings Services  2014-07-18       Original   \n",
+      "2     Standard & Poor's Ratings Services  2014-07-18       Original   \n",
+      "3     Standard & Poor's Ratings Services  2014-07-18       Original   \n",
+      "4     Standard & Poor's Ratings Services  2014-07-18       Original   \n",
+      "...                                  ...         ...            ...   \n",
+      "4367  Standard & Poor's Ratings Services  2015-01-30           Both   \n",
+      "4368  Standard & Poor's Ratings Services  2015-11-03  Supplementary   \n",
+      "4369  Standard & Poor's Ratings Services  2016-01-22           Both   \n",
+      "4370  Standard & Poor's Ratings Services  2016-01-22           Both   \n",
+      "4371  Standard & Poor's Ratings Services  2016-01-22           Both   \n",
+      "\n",
+      "      Rating Rank AAA is 10 Next Rating Next Rating Date  ...  \\\n",
+      "0                         8         NaN              NaN  ...   \n",
+      "1                         8         NaN              NaN  ...   \n",
+      "2                         8         NaN              NaN  ...   \n",
+      "3                         8         NaN              NaN  ...   \n",
+      "4                         8         NaN              NaN  ...   \n",
+      "...                     ...         ...              ...  ...   \n",
+      "4367                      7         BBB       2015-11-03  ...   \n",
+      "4368                      7         BBB       2016-01-22  ...   \n",
+      "4369                      7         BBB       2016-12-23  ...   \n",
+      "4370                      7         BBB       2016-12-23  ...   \n",
+      "4371                      7         BBB       2016-12-23  ...   \n",
+      "\n",
+      "     Change Direction Since Last Fixed Quarter Date  \\\n",
+      "0                                              None   \n",
+      "1                   Same As Last Fixed Quarter Date   \n",
+      "2                   Same As Last Fixed Quarter Date   \n",
+      "3                   Same As Last Fixed Quarter Date   \n",
+      "4                   Same As Last Fixed Quarter Date   \n",
+      "...                                             ...   \n",
+      "4367                Same As Last Fixed Quarter Date   \n",
+      "4368                Same As Last Fixed Quarter Date   \n",
+      "4369                Same As Last Fixed Quarter Date   \n",
+      "4370                Same As Last Fixed Quarter Date   \n",
+      "4371                Same As Last Fixed Quarter Date   \n",
+      "\n",
+      "     Change Since Last Fixed Quarter Date Ticker  \\\n",
+      "0                                     NaN   ABBV   \n",
+      "1                                     0.0   ABBV   \n",
+      "2                                     0.0   ABBV   \n",
+      "3                                     0.0   ABBV   \n",
+      "4                                     0.0   ABBV   \n",
+      "...                                   ...    ...   \n",
+      "4367                                  0.0    ZTS   \n",
+      "4368                                  0.0    ZTS   \n",
+      "4369                                  0.0    ZTS   \n",
+      "4370                                  0.0    ZTS   \n",
+      "4371                                  0.0    ZTS   \n",
+      "\n",
+      "                                            Description Company Name  \\\n",
+      "0     AbbVie Inc. (AbbVie) is a research-based bioph...   ABBVIE INC   \n",
+      "1     AbbVie Inc. (AbbVie) is a research-based bioph...   ABBVIE INC   \n",
+      "2     AbbVie Inc. (AbbVie) is a research-based bioph...   ABBVIE INC   \n",
+      "3     AbbVie Inc. (AbbVie) is a research-based bioph...   ABBVIE INC   \n",
+      "4     AbbVie Inc. (AbbVie) is a research-based bioph...   ABBVIE INC   \n",
+      "...                                                 ...          ...   \n",
+      "4367  Zoetis Inc. is focused on the discovery, devel...   ZOETIS INC   \n",
+      "4368  Zoetis Inc. is focused on the discovery, devel...   ZOETIS INC   \n",
+      "4369  Zoetis Inc. is focused on the discovery, devel...   ZOETIS INC   \n",
+      "4370  Zoetis Inc. is focused on the discovery, devel...   ZOETIS INC   \n",
+      "4371  Zoetis Inc. is focused on the discovery, devel...   ZOETIS INC   \n",
+      "\n",
+      "           Sector                                  Industry Group  \\\n",
+      "0     Health Care  Pharmaceuticals, Biotechnology & Life Sciences   \n",
+      "1     Health Care  Pharmaceuticals, Biotechnology & Life Sciences   \n",
+      "2     Health Care  Pharmaceuticals, Biotechnology & Life Sciences   \n",
+      "3     Health Care  Pharmaceuticals, Biotechnology & Life Sciences   \n",
+      "4     Health Care  Pharmaceuticals, Biotechnology & Life Sciences   \n",
+      "...           ...                                             ...   \n",
+      "4367  Health Care  Pharmaceuticals, Biotechnology & Life Sciences   \n",
+      "4368  Health Care  Pharmaceuticals, Biotechnology & Life Sciences   \n",
+      "4369  Health Care  Pharmaceuticals, Biotechnology & Life Sciences   \n",
+      "4370  Health Care  Pharmaceuticals, Biotechnology & Life Sciences   \n",
+      "4371  Health Care  Pharmaceuticals, Biotechnology & Life Sciences   \n",
+      "\n",
+      "             Industry     Sub-Industry  \\\n",
+      "0       Biotechnology    Biotechnology   \n",
+      "1       Biotechnology    Biotechnology   \n",
+      "2       Biotechnology    Biotechnology   \n",
+      "3       Biotechnology    Biotechnology   \n",
+      "4       Biotechnology    Biotechnology   \n",
+      "...               ...              ...   \n",
+      "4367  Pharmaceuticals  Pharmaceuticals   \n",
+      "4368  Pharmaceuticals  Pharmaceuticals   \n",
+      "4369  Pharmaceuticals  Pharmaceuticals   \n",
+      "4370  Pharmaceuticals  Pharmaceuticals   \n",
+      "4371  Pharmaceuticals  Pharmaceuticals   \n",
+      "\n",
+      "                                                Comment  \n",
+      "0     Companies primarily engaged in the research, d...  \n",
+      "1     Companies primarily engaged in the research, d...  \n",
+      "2     Companies primarily engaged in the research, d...  \n",
+      "3     Companies primarily engaged in the research, d...  \n",
+      "4     Companies primarily engaged in the research, d...  \n",
+      "...                                                 ...  \n",
+      "4367  Companies engaged in the research, development...  \n",
+      "4368  Companies engaged in the research, development...  \n",
+      "4369  Companies engaged in the research, development...  \n",
+      "4370  Companies engaged in the research, development...  \n",
+      "4371  Companies engaged in the research, development...  \n",
+      "\n",
+      "[4372 rows x 160 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Left join us_stocks with merged\n",
+    "merged = pd.merge(merged, us_stocks, left_on='ticker', right_on='Ticker', how='left')\n",
+    "print(merged)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Some Basic Stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -753,21 +982,19 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 4372 entries, 0 to 4371\n",
-      "Columns: 152 entries, ticker to Change Since Last Fixed Quarter Date\n",
-      "dtypes: float64(104), int32(1), int64(9), object(38)\n",
-      "memory usage: 5.1+ MB\n",
+      "Columns: 160 entries, ticker to Comment\n",
+      "dtypes: float64(104), int32(1), int64(9), object(46)\n",
+      "memory usage: 5.3+ MB\n",
       "None\n",
       "Index(['ticker', 'fixed_quarter_date', 'earnings_call_date', 'Rating',\n",
       "       'Rating Agency Name', 'rating_date', 'Source', 'Rating Rank AAA is 10',\n",
       "       'Next Rating', 'Next Rating Date',\n",
       "       ...\n",
-      "       'eps', 'epsdiluted', 'weightedAverageShsOut',\n",
-      "       'weightedAverageShsOutDil', 'link_income_statement',\n",
-      "       'finalLink_income_statement', 'rating_on_previous_fixed_quarter_date',\n",
-      "       'rating_on_previous_fixed_quarter_date AAA is 10',\n",
       "       'Change Direction Since Last Fixed Quarter Date',\n",
-      "       'Change Since Last Fixed Quarter Date'],\n",
-      "      dtype='object', length=152)\n"
+      "       'Change Since Last Fixed Quarter Date', 'Ticker', 'Description',\n",
+      "       'Company Name', 'Sector', 'Industry Group', 'Industry', 'Sub-Industry',\n",
+      "       'Comment'],\n",
+      "      dtype='object', length=160)\n"
      ]
     }
    ],
@@ -780,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
