Add markdown in the beginning

--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
@@ -8,6 +8,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Credit Rating  \n",
+    "    * File: credit_ratings_on_fixed_quarter_dates.csv  \n",
+    "    * Columns: rating, symbol, rating agency, date, previous/next rating/date, type, change in rating ...  \n",
+    "    * Size: 9117 × 16  \n",
+    "    * 638 unique companies  \n",
+    "2. Earnings Call  \n",
+    "    * File: calls_short.csv  \n",
+    "    * Columns: company, sector, year, quarter, date, transcript  \n",
+    "    * Size: 24580 x 6  \n",
+    "    * 1322 unique companies  \n",
+    "3. Financial Data  \n",
+    "    * File: combined_financial_data_short.csv  \n",
+    "    * Columns: date, symbol, year, period, filing_date, financial variables, ...  \n",
+    "    * Size: 22488 × 126  \n",
+    "    * 862 unique companies  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
