note on winsorizing

--- a/Code/Data Loading and Cleaning/Tabular Financial/Combine and Correct Tabular Financial Statements Data.ipynb
+++ b/Code/Data Loading and Cleaning/Tabular Financial/Combine and Correct Tabular Financial Statements Data.ipynb
@@ -453,7 +453,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Original Correction"
+    "## Original Correction\n",
+    "\n",
+    "Winsorizing cases where the last few digits are 0s (to handle mis-multiplication by 1,000)"
    ]
   },
   {
