investigating necessity of correction with usd only limit

--- a/Code/Data Loading and Cleaning/Tabular Financial/Combine and Correct Tabular Financial Statements Data.ipynb
+++ b/Code/Data Loading and Cleaning/Tabular Financial/Combine and Correct Tabular Financial Statements Data.ipynb
@@ -2626,11 +2626,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 171,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             date symbol reportedCurrency     cik fillingDate  \\\n",
+      "34987  2008-12-31   ENIA              USD  912505  2008-12-31   \n",
+      "\n",
+      "              acceptedDate  calendarYear  period  cashAndCashEquivalents  \\\n",
+      "34987  2008-12-30 19:00:00          2008       4        1,187,497,329.97   \n",
+      "\n",
+      "       shortTermInvestments  ...  incomeBeforeTaxRatio  incomeTaxExpense  \\\n",
+      "34987        164,503,769.05  ...                  0.36    208,224,453.36   \n",
+      "\n",
+      "       netIncome_income_statement  netIncomeRatio  eps  epsdiluted  \\\n",
+      "34987              562,385,513.05            0.27 0.82        0.82   \n",
+      "\n",
+      "       weightedAverageShsOut  weightedAverageShsOutDil  link_income_statement  \\\n",
+      "34987         686,492,246.00            686,492,246.00                    NaN   \n",
+      "\n",
+      "       finalLink_income_statement  \n",
+      "34987                         NaN  \n",
+      "\n",
+      "[1 rows x 124 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Examples of extreme values - absolute value greater than one quadrillion for a variable"
+    "# Examples of extreme values - high absolute value\n",
+    "print(merged_usd[merged_usd['otherLiabilities'] == -448599673675132.38])"
    ]
   },
   {
