--- a/Code/Exploratory Data Analysis/All Data - Tabular EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data - Tabular EDA.ipynb
@@ -14,7 +14,7 @@
     "4. Use earnings call dates to transform dataset of credit ratings so there is one rating at each earnings call date. The key assumption is that a rating stays the same until a new rating is issued. Use leads to get rating at next earnings call date, date of next earnings call, rating 2 earnings call dates ahead, and date of that earnings call.\n",
     "5. Inner join earnings call data with credit rating data. Use year and quarter from earnings calls to inner join with financial statement data. This produces the `all_data` dataset.\n",
     "\n",
-    "GitHub copilot suggestions were used, primarily for plotting."
+    "GitHub copilot suggestions were used for plotting and low-level syntax."
    ]
   },
   {
