eda folder reorg

--- a/Code/Exploratory Data Analysis/Credit Rating/Credit Ratings EDA.ipynb
+++ b/Code/Exploratory Data Analysis/Credit Rating/Credit Ratings EDA.ipynb
@@ -1928,7 +1928,7 @@
     "plt.hist(s_and_p_2010_2016_data['Symbol'].value_counts(), bins=range(10), align='left', rwidth=0.5)\n",
     "plt.xticks(range(10))\n",
     "plt.title('Number of Rating Issuances per Company - S&P 2010-2016')\n",
-    "plt.savefig('../../Output/Number of Rating Issuances per Company - S&P 2010-2016.png')\n",
+    "plt.savefig('../../../Output/Number of Rating Issuances per Company - S&P 2010-2016.png')\n",
     "plt.show()"
    ]
   },
