run all data with altman z

--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
@@ -295,44 +295,18 @@
       "50281  2007-08-09 08:38:13          2007       2                     0.0   \n",
       "50282  2007-05-09 09:19:53          2007       1                     0.0   \n",
       "\n",
-      "       shortTermInvestments  ...  incomeBeforeTaxRatio  incomeTaxExpense  \\\n",
-      "0               166000000.0  ...              0.038168        21000000.0   \n",
-      "1               173000000.0  ...              0.141079        19000000.0   \n",
-      "2               139000000.0  ...              0.151014        24000000.0   \n",
-      "3               125000000.0  ...             -0.010033       -72000000.0   \n",
-      "4               146000000.0  ...             -0.076923        -8000000.0   \n",
-      "...                     ...  ...                   ...               ...   \n",
-      "50278                   0.0  ...              0.247136          649000.0   \n",
-      "50279                   0.0  ...              0.329490          902000.0   \n",
-      "50280                   0.0  ...              0.348068         1125000.0   \n",
-      "50281                   0.0  ...              0.324165          920000.0   \n",
-      "50282                   0.0  ...              0.280433          745000.0   \n",
-      "\n",
-      "       netIncome_income_statement  netIncomeRatio     eps  epsdiluted  \\\n",
-      "0                     -30000000.0       -0.025445 -0.1000     -0.1000   \n",
-      "1                     -18000000.0       -0.014938 -0.0643     -0.0643   \n",
-      "2                     177000000.0        0.132983  0.6100      0.6100   \n",
-      "3                      60000000.0        0.050167  0.2200      0.2200   \n",
-      "4                     -77000000.0       -0.069683 -0.2800     -0.2800   \n",
-      "...                           ...             ...     ...         ...   \n",
-      "50278                   1206000.0        0.160671  0.1100      0.1100   \n",
-      "50279                   1670000.0        0.213938  0.1500      0.1500   \n",
-      "50280                   1757000.0        0.212198  0.1500      0.1500   \n",
-      "50281                   1661000.0        0.208616  0.1500      0.1500   \n",
-      "50282                   1326000.0        0.179553  0.1200      0.1200   \n",
-      "\n",
-      "       weightedAverageShsOut  weightedAverageShsOutDil  \\\n",
-      "0                292857143.0               292857143.0   \n",
-      "1                280000000.0               280000000.0   \n",
-      "2                288888889.0               288888889.0   \n",
-      "3                275358750.0               275358750.0   \n",
-      "4                275200000.0               275200000.0   \n",
-      "...                      ...                       ...   \n",
-      "50278             10963636.0                10963636.0   \n",
-      "50279             10963636.0                10963636.0   \n",
-      "50280             11713333.0                11713333.0   \n",
-      "50281             11073333.0                11073333.0   \n",
-      "50282             11050000.0                11050000.0   \n",
+      "       shortTermInvestments  ...  weightedAverageShsOutDil  \\\n",
+      "0               166000000.0  ...               292857143.0   \n",
+      "1               173000000.0  ...               280000000.0   \n",
+      "2               139000000.0  ...               288888889.0   \n",
+      "3               125000000.0  ...               275358750.0   \n",
+      "4               146000000.0  ...               275200000.0   \n",
+      "...                     ...  ...                       ...   \n",
+      "50278                   0.0  ...                10963636.0   \n",
+      "50279                   0.0  ...                10963636.0   \n",
+      "50280                   0.0  ...                11713333.0   \n",
+      "50281                   0.0  ...                11073333.0   \n",
+      "50282                   0.0  ...                11050000.0   \n",
       "\n",
       "                                   link_income_statement  \\\n",
       "0      https://www.sec.gov/Archives/edgar/data/153323...   \n",
@@ -347,20 +321,33 @@
       "50281  https://www.sec.gov/Archives/edgar/data/108985...   \n",
       "50282  https://www.sec.gov/Archives/edgar/data/108985...   \n",
       "\n",
-      "                              finalLink_income_statement  \n",
-      "0      https://www.sec.gov/Archives/edgar/data/153323...  \n",
-      "1      https://www.sec.gov/Archives/edgar/data/153323...  \n",
-      "2      https://www.sec.gov/Archives/edgar/data/153323...  \n",
-      "3      https://www.sec.gov/Archives/edgar/data/153323...  \n",
-      "4      https://www.sec.gov/Archives/edgar/data/153323...  \n",
-      "...                                                  ...  \n",
-      "50278  https://www.sec.gov/Archives/edgar/data/108985...  \n",
-      "50279  https://www.sec.gov/Archives/edgar/data/108985...  \n",
-      "50280  https://www.sec.gov/Archives/edgar/data/108985...  \n",
-      "50281  https://www.sec.gov/Archives/edgar/data/108985...  \n",
-      "50282  https://www.sec.gov/Archives/edgar/data/108985...  \n",
+      "                              finalLink_income_statement         EBIT  \\\n",
+      "0      https://www.sec.gov/Archives/edgar/data/153323...  302000000.0   \n",
+      "1      https://www.sec.gov/Archives/edgar/data/153323...  419000000.0   \n",
+      "2      https://www.sec.gov/Archives/edgar/data/153323...  462000000.0   \n",
+      "3      https://www.sec.gov/Archives/edgar/data/153323...  364000000.0   \n",
+      "4      https://www.sec.gov/Archives/edgar/data/153323...  288000000.0   \n",
+      "...                                                  ...          ...   \n",
+      "50278  https://www.sec.gov/Archives/edgar/data/108985...    3135000.0   \n",
+      "50279  https://www.sec.gov/Archives/edgar/data/108985...    3338000.0   \n",
+      "50280  https://www.sec.gov/Archives/edgar/data/108985...    3946000.0   \n",
+      "50281  https://www.sec.gov/Archives/edgar/data/108985...    3644000.0   \n",
+      "50282  https://www.sec.gov/Archives/edgar/data/108985...    3378000.0   \n",
       "\n",
-      "[50283 rows x 124 columns]\n",
+      "         Ratio_A   Ratio_B     Ratio_C   Ratio_D    Ratio_E    Altman_Z  \n",
+      "0       0.004606  0.017983    0.000000 -0.014780   0.000000    0.015268  \n",
+      "1       0.006358  0.018285    0.000000 -0.005129   0.000000    0.032929  \n",
+      "2       0.007130  0.020541    0.000000 -0.020356   0.000000    0.019437  \n",
+      "3       0.005680  0.018663    0.000000 -0.021456   0.000000    0.011473  \n",
+      "4       0.005018  0.019255    0.000000 -0.016606   0.000000    0.015696  \n",
+      "...          ...       ...         ...       ...        ...         ...  \n",
+      "50278  14.706365  0.035211  389.037250 -0.023591  50.799116  353.078667  \n",
+      "50279  15.822230  0.037001  393.647745 -0.068958  52.074001  361.259488  \n",
+      "50280  19.120718  0.040122  403.897604 -0.029607  51.736419  377.872112  \n",
+      "50281  17.993907  0.039316  412.128786 -0.015550  50.589345  377.502509  \n",
+      "50282  17.078720  0.037338  422.516235 -0.003666  50.093534  380.033029  \n",
+      "\n",
+      "[50283 rows x 131 columns]\n",
       "     ticker          fixed_quarter_date earnings_call_date Rating  \\\n",
       "0      ABBV  2014-10-01 00:00:00.000000         2014-07-25      A   \n",
       "1      ABBV  2015-01-01 00:00:00.000000         2014-10-31      A   \n",
@@ -400,32 +387,6 @@
       "4362                      7         BBB       2016-12-23  ...   \n",
       "4363                      7         BBB       2016-12-23  ...   \n",
       "\n",
-      "     incomeBeforeTaxRatio incomeTaxExpense netIncome_income_statement  \\\n",
-      "0                0.290905      335000000.0               1.098000e+09   \n",
-      "1                0.136880      181000000.0               5.060000e+08   \n",
-      "2               -0.190205        -227000.0              -8.100000e+05   \n",
-      "3                0.276984      374000000.0               1.022000e+09   \n",
-      "4                0.306484      312000000.0               1.366000e+09   \n",
-      "...                   ...              ...                        ...   \n",
-      "4359             0.054160       49000000.0               2.200000e+07   \n",
-      "4360             0.285714      128000000.0               2.040000e+08   \n",
-      "4361             0.274834      108000000.0               2.240000e+08   \n",
-      "4362             0.268332       96000000.0               2.390000e+08   \n",
-      "4363             0.180893       77000000.0               1.540000e+08   \n",
-      "\n",
-      "      netIncomeRatio   eps  epsdiluted weightedAverageShsOut  \\\n",
-      "0           0.222899  0.69        0.68          1.594000e+09   \n",
-      "1           0.100817  0.32        0.31          1.595000e+09   \n",
-      "2          -0.148569 -0.51       -0.51          1.591389e+09   \n",
-      "3           0.202778  0.64        0.63          1.595000e+09   \n",
-      "4           0.249498  0.84        0.83          1.620000e+09   \n",
-      "...              ...   ...         ...                   ...   \n",
-      "4359        0.017268  0.04        0.04          4.982710e+08   \n",
-      "4360        0.175559  0.41        0.41          4.973990e+08   \n",
-      "4361        0.185430  0.45        0.45          4.963000e+08   \n",
-      "4362        0.192587  0.48        0.48          4.952000e+08   \n",
-      "4363        0.120595  0.31        0.31          4.939320e+08   \n",
-      "\n",
       "     weightedAverageShsOutDil  \\\n",
       "0                1.608000e+09   \n",
       "1                1.610000e+09   \n",
@@ -452,20 +413,33 @@
       "4362  https://www.sec.gov/Archives/edgar/data/155528...   \n",
       "4363  https://www.sec.gov/Archives/edgar/data/155528...   \n",
       "\n",
-      "                             finalLink_income_statement  \n",
-      "0     https://www.sec.gov/Archives/edgar/data/155115...  \n",
-      "1     https://www.sec.gov/Archives/edgar/data/155115...  \n",
-      "2     https://www.sec.gov/Archives/edgar/data/155115...  \n",
-      "3     https://www.sec.gov/Archives/edgar/data/155115...  \n",
-      "4     https://www.sec.gov/Archives/edgar/data/155115...  \n",
-      "...                                                 ...  \n",
-      "4359  https://www.sec.gov/Archives/edgar/data/155528...  \n",
-      "4360  https://www.sec.gov/Archives/edgar/data/155528...  \n",
-      "4361  https://www.sec.gov/Archives/edgar/data/155528...  \n",
-      "4362  https://www.sec.gov/Archives/edgar/data/155528...  \n",
-      "4363  https://www.sec.gov/Archives/edgar/data/155528...  \n",
+      "                             finalLink_income_statement          EBIT  \\\n",
+      "0     https://www.sec.gov/Archives/edgar/data/155115...  1.515000e+09   \n",
+      "1     https://www.sec.gov/Archives/edgar/data/155115...  1.210000e+09   \n",
+      "2     https://www.sec.gov/Archives/edgar/data/155115... -1.932220e+08   \n",
+      "3     https://www.sec.gov/Archives/edgar/data/155115...  1.687000e+09   \n",
+      "4     https://www.sec.gov/Archives/edgar/data/155115...  1.852000e+09   \n",
+      "...                                                 ...           ...   \n",
+      "4359  https://www.sec.gov/Archives/edgar/data/155528...  1.470000e+08   \n",
+      "4360  https://www.sec.gov/Archives/edgar/data/155528...  3.770000e+08   \n",
+      "4361  https://www.sec.gov/Archives/edgar/data/155528...  3.520000e+08   \n",
+      "4362  https://www.sec.gov/Archives/edgar/data/155528...  3.780000e+08   \n",
+      "4363  https://www.sec.gov/Archives/edgar/data/155528...  2.920000e+08   \n",
       "\n",
-      "[4364 rows x 146 columns]\n"
+      "       Ratio_A   Ratio_B   Ratio_C   Ratio_D   Ratio_E  Altman_Z  \n",
+      "0     0.052160  0.169599  0.000672  0.395145  0.079153  0.925424  \n",
+      "1     0.042525  0.176390  0.000672  0.383777  0.074893  0.880744  \n",
+      "2    -0.007014  0.197916  0.000620  0.170182  0.019421  0.404570  \n",
+      "3     0.063186  0.188771  0.000632  0.163227  0.027679  0.630399  \n",
+      "4     0.034389  0.101662  0.000352  0.104336  0.023322  0.372192  \n",
+      "...        ...       ...       ...       ...       ...       ...  \n",
+      "4359  0.018577  0.161001  0.000733  0.258941  0.110704  0.686849  \n",
+      "4360  0.050584  0.155910  0.000798  0.287669  0.136321  0.857809  \n",
+      "4361  0.046821  0.160681  0.000813  0.304469  0.158287  0.901036  \n",
+      "4362  0.048995  0.160855  0.000817  0.301361  0.184446  0.941280  \n",
+      "4363  0.038175  0.166950  0.000813  0.297163  0.193097  0.918677  \n",
+      "\n",
+      "[4364 rows x 153 columns]\n"
      ]
     }
    ],
@@ -959,7 +933,7 @@
       "4362  Companies engaged in the research, development...  \n",
       "4363  Companies engaged in the research, development...  \n",
       "\n",
-      "[4364 rows x 158 columns]\n"
+      "[4364 rows x 165 columns]\n"
      ]
     }
    ],
@@ -1005,9 +979,9 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 4364 entries, 0 to 4363\n",
-      "Columns: 158 entries, ticker to Comment\n",
-      "dtypes: float64(104), int32(1), int64(9), object(44)\n",
-      "memory usage: 5.2+ MB\n",
+      "Columns: 165 entries, ticker to Comment\n",
+      "dtypes: float64(111), int32(1), int64(9), object(44)\n",
+      "memory usage: 5.5+ MB\n",
       "None\n",
       "Index(['ticker', 'fixed_quarter_date', 'earnings_call_date', 'Rating',\n",
       "       'Rating Agency Name', 'rating_date', 'Source', 'Rating Rank AAA is 10',\n",
@@ -1017,7 +991,7 @@
       "       'Change Since Last Fixed Quarter Date', 'Ticker', 'Description',\n",
       "       'Company Name', 'Sector', 'Industry Group', 'Industry', 'Sub-Industry',\n",
       "       'Comment'],\n",
-      "      dtype='object', length=158)\n"
+      "      dtype='object', length=165)\n"
      ]
     }
    ],
